@@ -4,6 +4,7 @@ Deluge 1.1.1 - (In Development)
 
  Misc:
   * Fix bdecoding some torrent files
+  * Fix the -l, --logfile option
 
 Deluge 1.1.0 - "Time gas!" (10 January 2009)
  Core:
